syntax = "proto3";
package dymensionxyz.dymension.rollapp;

option go_package = "github.com/dymensionxyz/dymension/x/rollapp/types";

import "gogoproto/gogo.proto";

import "rollapp/block_descriptor.proto"; 
import "rollapp/state_status.proto"; 

// StateInfo defines a rollapps' state.
message StateInfo {
    // sequencer is the bech32-encoded address of the sequencer sent the update
    string sequencer = 1;
    // rollappId is the rollapp that the sequencer belongs to and asking to update
    // The rollappId follows the same standard as cosmos chain_id
    string rollappId = 2;
    // startHeight is the block height of the first block in the batch
    uint64 startHeight = 3;
    // numBlocks is the number of blocks included in this batch update
    uint64 numBlocks = 4;
    // DAPath is the description of the location on the DA layer
    string DAPath = 5;
    // version is the version of the rollapp
    uint64 version = 6;
    // creationHeight is the height at which the UpdateState took place
    uint64 creationHeight = 7; 
    // status is the status of the state update
    StateStatus status = 8; 
    // BDs is a list of block description objects (one per block)
    // the list must be ordered by height, starting from startHeight to startHeight+numBlocks-1
    BlockDescriptors BDs = 9 [(gogoproto.nullable) = false];
}
